--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,7 +17,7 @@ texture_format/etc2=false
 binary_format/64_bits=false
 custom_template/release=""
 custom_template/debug=""
-application/icon="C:/Users/Paulo/Documents/GitHub/projeto1/ariel icon vai.ico"
+application/icon="C:/Users/Paulo/Documents/GitHub/projeto1/icon_Ariel.ico"
 application/file_version=""
 application/product_version="Beta"
 application/company_name="Armadillo"
